src/objects/Harvest_Invoice_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Full_Recipient_List__c</fullName>
        <label>Full Recipient List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Harvest_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Messages</relationshipLabel>
        <relationshipName>Harvest_Invoice_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Send_me_a_copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send me a copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_By_Email__c</fullName>
        <label>Sent By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sent_By__c</fullName>
        <label>Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Harvest Invoice Message</label>
    <nameField>
        <displayFormat>IM-{000000}</displayFormat>
        <label>Harvest Invoice Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Invoice Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>